--- a/test/assets/common_versions.sh.template
+++ b/test/assets/common_versions.sh.template
@@ -87,7 +87,7 @@ get_redhat_bootc_image_url() {{
     sha_id=$(skopeo inspect --raw "docker://${{registry}}/openshift4/microshift-bootc-rhel9:v${{release_version}}" | \
         jq -r ".manifests[] | select(.platform.architecture==\"${{arch}}\") | .digest" 2>/dev/null)
     if [ "${{sha_id}}" ] && [[ "${{sha_id}}" != "" ]] && [[ "${{sha_id}}" =~ ^sha256:[0-9a-f]{{64}}$ ]]; then
-        image_url="${{registry}}/openshift4/microshift-bootc-rhel9@${sha_id}"
+        image_url="${{registry}}/openshift4/microshift-bootc-rhel9@${{sha_id}}"
     fi
     echo "${{image_url}}"
 }}
